feat: Add decorative stars with twinkle animation around the prize wheel for enhanced visual appeal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="container">
+        <!-- Decorative stars positioned around the wheel -->
+        <div class="decorative-star star-left">⭐</div>
+        <div class="decorative-star star-right">⭐</div>
+        
         <!-- Main wheel container -->
         <div class="wheel-container">
             <!-- Fixed map pointer at top of circle -->
