feat: Redesign decorative stars around the prize wheel with new positioning and twinkle animations for enhanced visual appeal

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <!-- Decorative stars positioned around the wheel -->
-        <div class="decorative-star star-left">⭐</div>
-        <div class="decorative-star star-right">⭐</div>
+        <!-- Decorative stars positioned around the wheel circle -->
+        <div class="decorative-star star-1">⭐</div>
+        <div class="decorative-star star-2">⭐</div>
+        <div class="decorative-star star-3">⭐</div>
+        <div class="decorative-star star-4">⭐</div>
         
         <!-- Main wheel container -->
         <div class="wheel-container">
