feat: Replace decorative stars with randomly positioned stars and update animations for improved visual dynamics

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prize Wheel</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <!-- Decorative stars positioned around the wheel circle -->
-        <div class="decorative-star star-1">⭐</div>
-        <div class="decorative-star star-2">⭐</div>
-        <div class="decorative-star star-3">⭐</div>
-        <div class="decorative-star star-4">⭐</div>
+        <!-- Random stars around the wheel -->
+        <div class="random-star" style="top: 15%; left: 25%;">⭐</div>
+        <div class="random-star" style="top: 25%; left: 80%;">⭐</div>
+        <div class="random-star" style="top: 40%; left: 10%;">⭐</div>
+        <div class="random-star" style="top: 60%; left: 85%;">⭐</div>
+        <div class="random-star" style="top: 75%; left: 20%;">⭐</div>
+        <div class="random-star" style="top: 80%; left: 75%;">⭐</div>
+        <div class="random-star" style="top: 20%; left: 60%;">⭐</div>
+        <div class="random-star" style="top: 65%; left: 5%;">⭐</div>
         
         <!-- Main wheel container -->
         <div class="wheel-container">
